DoctorCode_V_0.0.01 UI Design Complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="see_doctor">See Your Doctor</string>
     <string name="some_advices">Some Advices</string>
     <string name="important_number">Important NUmber</string>
+    <string name="version">DoctorCode_V_0.0.01</string>
 </resources>
